<resources>
    <string name="app_name">PhoneBookApp</string>
    <string name="first_name">Enter first Name</string>
    <string name="last_name">Enter last name</string>
    <string name="phone_number">Enter phone number</string>
    <string name="add_contact">Add contact</string>
    <string name="all_contacts">All Contacts</string>
    <string name="read_phone_number">Phone Number</string>
    <string name="read_last_name">Last Name</string>
    <string name="read_first_name">First Name</string>
    <string name="update_first_name">Update First Name</string>
    <string name="update_last_name">Update Last Name</string>
    <string name="update_phone_number">Update Phone Number</string>
    <string name="update_contact">Update Contact</string>
    <string name="delete_contact">Delete Contact</string>
</resources>