<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".UpdateContactActivity">

    <!--Edit text to update first name-->
    <EditText
        android:id="@+id/idEdtFirstName"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_margin="10dp"
        android:autofillHints="name"
        android:inputType="textPersonName"
        android:hint="@string/update_first_name" />

    <!--edit text to update last name-->
    <EditText
        android:id="@+id/idEdtLastName"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_margin="10dp"
        android:autofillHints="name"
        android:inputType="textPersonName"
        android:hint="@string/update_last_name" />

    <!--edit text to update phone number-->
    <EditText
        android:id="@+id/idEdtPhoneNumber"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_margin="10dp"
        android:autofillHints="phone"
        android:inputType="phone"
        android:hint="@string/update_phone_number" />

    <!--button for updating the contact-->
    <Button
        android:id="@+id/idBtnUpdateContact"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/update_contact"
        android:textAllCaps="false" />

</LinearLayout>